tests/specs/ecosystem/aziis98/gdsl/1_0_1.test
aziis98/gdsl/1.0.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:44:14
   | 
44 | export const render2d = (g: CRC2D, dsl: DSL) => {
   |              ^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:73:37
   | 
73 | export const stroke = (dsl: DSL) => (g: CRC2D) => {
   |                                     ^^^^^^^^^^^^^^^
   | 
74 |     g.beginPath()
   | ^^^^^^^^^^^^^^^^^
   | 
75 |     render2d(g, dsl)
   | ^^^^^^^^^^^^^^^^^^^^
   | 
76 |     g.stroke()
   | ^^^^^^^^^^^^^^
   | 
77 | }
   | ^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:79:35
   | 
79 | export const fill = (dsl: DSL) => (g: CRC2D) => {
   |                                   ^^^^^^^^^^^^^^^
   | 
80 |     g.beginPath()
   | ^^^^^^^^^^^^^^^^^
   | 
81 |     render2d(g, dsl)
   | ^^^^^^^^^^^^^^^^^^^^
   | 
82 |     g.fill()
   | ^^^^^^^^^^^^
   | 
83 | }
   | ^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:132:65
    | 
132 | export const circle = (x: number, y: number, radius: number) => (g: CRC2D) => {
    |                                                                 ^^^^^^^^^^^^^^^
    | 
133 |     g.arc(x, y, radius, 0, Math.PI * 2)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
134 | }
    | ^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


